--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Anotações</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="salvar">Salvar</string>
 </resources>
